# vibe-sci

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.gemini/skills/: vibe-sci
.github/workflows/: tests.yml
skills/vibe-sci/: SKILL.md
skills/vibe-sci/evals/: 2026-04-21_loop_7round_review_calibration.md  2026-04-21_structural_iteration_loop.md
skills/vibe-sci/references/: example_review.json
skills/vibe-sci/references/generation_examples/: README.md  generated_ideas.json  generated_paper.tex  generated_paper_meta.json  generated_paper_round3.tex  generated_paper_round4.tex  generated_paper_with_results.tex  results.json  results_v2_expanded.json  self_review.json  self_review_round3.json  self_review_round4.json  self_review_with_results.json  verification_report.json  verification_report_round3.json  verification_report_round4.json  verification_report_with_results.json
skills/vibe-sci/references/review_calibration/: README.md  paper_04_garbage.md  paper_06_chinese.md  paper_07_tiny.md  paper_real_flashattn2.md  review_04_garbage.json  review_06_chinese.json  review_07_tiny.json  review_real_flashattn2.json
tests/: test_skill_spec.py
vibe_sci/: __init__.py  cli.py  coder.py  config.py  hardware.py  ideation.py  llm.py  novelty.py  orchestrator.py  progress.py  results.py  review.py  treesearch.py  verify.py  writeup.py
vibe_sci/data/: package_fallbacks.yaml  results_schema.json  sanitize_rules.yaml  unicode_to_latex.yaml
vibe_sci/latex/: icml2024.tex.j2  references.bib
vibe_sci/prompts/: coherence_system.md  coherence_user.md  critique_system.md  critique_user.md  retry_system.md  section_instructions.json  section_system.md
vibe_sci/sanitize/: __init__.py  bad_cmds.py  cjk.py  escape.py  fences.py  items.py  markdown.py  math_balance.py  packages.py  pipeline.py  reasoning.py  rules.py  tables.py  unicode_math.py
