[project]
name = "vibe-sci"
version = "0.0.1"
description = "Provider-neutral autonomous research paper writer — ideation, LaTeX writeup, peer review, anti-hallucination numerical audit. Spun out from hermes-sci to remove Hermes-runtime coupling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "easyvibecoding" }]
keywords = [
    "research",
    "paper-writing",
    "latex",
    "ideation",
    "peer-review",
    "ml-research",
    "anti-hallucination",
    "autonomous-agent",
    "cli",
    "python",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/easyvibecoding/vibe-sci"
Repository = "https://github.com/easyvibecoding/vibe-sci"
Issues = "https://github.com/easyvibecoding/vibe-sci/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_sci"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
