[project]
name = "vibe-sci"
version = "0.0.1"
description = "Provider-neutral autonomous research paper writer — ideation, LaTeX writeup, peer review, anti-hallucination numerical audit. Spun out from hermes-sci to remove Hermes-runtime coupling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "easyvibecoding" }]
keywords = [
    "research",
    "paper-writing",
    "latex",
    "ideation",
    "peer-review",
    "ml-research",
    "anti-hallucination",
    "autonomous-agent",
    "ai-scientist",
    "research-paper-generator",
    "arxiv",
    "llm-agent",
    "claude-code",
    "agent-skills",
    "provider-neutral",
    "openai-compatible",
    "hermes-sci",
    "cli",
    "python",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    "openai>=1.50",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]
# review.py::_extract_pdf_text needs at least one PDF text extractor; both
# are pure-Python, pick either. Raised as "pip install 'vibe-sci[review]'"
# in the error message when a user tries to review a .pdf without either
# being installed.
review = ["pypdf>=3.0", "pymupdf4llm>=0.1"]

[project.scripts]
vibe-sci = "vibe_sci.cli:main"

[project.urls]
Homepage = "https://github.com/easyvibecoding/vibe-sci"
Repository = "https://github.com/easyvibecoding/vibe-sci"
Issues = "https://github.com/easyvibecoding/vibe-sci/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_sci"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Ported domain code (ideation/writeup/review/sanitize) uses loop-variable
# closures intentionally and lots of zip(...) without strict=; matching
# vibe-resume's ignore set keeps the port viable without line-by-line edits.
ignore = ["E501", "B007", "B023", "B033", "B034", "B905", "UP028", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
